# FFmpegCommandDemo

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: avloadingindicatorview.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android_log.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c  ffmpeg_thread.h  native-lib.cpp
app/src/main/cpp/ffmpeg/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h
app/src/main/java/com/lau/ffmpegcommanddemo/: CmdList.java  FCApplication.java  FfmpegUtil.java  MainActivity.java
app/src/main/java/com/lau/ffmpegcommanddemo/base/: BaseActivity.java
app/src/main/java/com/lau/ffmpegcommanddemo/fresco/: FrescoManager.java  SizeDeterminer.java  SizeReadyCallback.java
app/src/main/java/com/lau/ffmpegcommanddemo/resource/: ResourceScanManager.java
app/src/main/java/com/lau/ffmpegcommanddemo/resource/audio/: AudioAdapter.java  AudioSelectActivity.java
app/src/main/java/com/lau/ffmpegcommanddemo/resource/image/: ImageAdapter.java  ImageSelectActivity.java
app/src/main/java/com/lau/ffmpegcommanddemo/resource/pojo/: AudioItem.java  VideoItem.java
app/src/main/java/com/lau/ffmpegcommanddemo/resource/video/: VideoAdapter.java  VideoSelectActivity.java
app/src/main/java/com/lau/ffmpegcommanddemo/util/: AppCacheFileUtil.java  AppToastUtil.java  DensityUtil.java  FileUtil.java  PermissionCheckUtil.java  RuntimeContext.java
app/src/main/java/com/lau/ffmpegcommanddemo/videoselect/: ResourceScanManager.java  VideoAdapter.java  VideoItem.java  VideoSelectActivity.java
app/src/main/java/com/lau/ffmpegcommanddemo/widget/recyclerview/: GridItemDecoration.java
app/src/main/res/drawable/: app_toast_bg_shape.xml  main_item_bg_selector.xml  video_select_duration_bg_shape.xml
app/src/main/res/layout/: activity_main.xml  app_toast_layout.xml  audio_adapter.xml  audio_select_activity.xml  image_adapter.xml  image_select_activity.xml  video_adapter.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
